fixed white spacing on lanz page i guess???

--- a/styles/Lanzcontact.module.css
+++ b/styles/Lanzcontact.module.css
@@ -7,7 +7,6 @@
     width: 50%;
     float: right;
     padding-right: 2%;
-    height: 100%;
 }
 
 .lanzcontact h3 {
